--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-paper": "^4.12.4",
