--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-image-picker": "^4.8.5",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
